--- a/sass/modules/_message.scss
+++ b/sass/modules/_message.scss
@@ -3,7 +3,8 @@
 
     width: 45%;
     padding: 8px 12px;
-    background-color: white; 
+    background-color: #9068BE; 
+    color: #ffffff;
     border-radius: 8px;
     margin-bottom: 1rem;
 
@@ -13,6 +14,6 @@
 
 .my-message {
     float: right !important;
-    background-color: #86bf9d;
+    background-color: #6ed3cf;
     color: white;
 }
