--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,103 @@
-*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%}body{font:16px Helvetica, Arial}main{display:flex;height:100%;flex-direction:row}.form-container,.messages{padding:20px}.form-container{flex:1;border:6px solid #bfcfd6;background-color:#e3edf1}.form-container label{display:block;margin-bottom:0.5rem}.messages{flex:2;background-color:#eee;border:6px solid #e2e0e0}input,textarea{display:block;width:100%;border:2px solid #bfcfd6;border-radius:4px;font-size:0.8rem;padding:0.4rem;border-style:solid}textarea{height:135px}form{padding:3px;margin:12px auto}form input[type=submit]{width:auto;padding:10px;background-color:#4bc811;margin-top:1rem;border-radius:8px;color:white;cursor:pointer;text-transform:uppercase;font-weight:bold}#messages{list-style-type:none;margin:0;padding:0}#messages li{padding:5px 10px}#messages li:nth-child(odd){background:#eee}.new-message{width:45%;padding:8px 12px;background-color:white;border-radius:8px;margin-bottom:1rem;float:left;clear:both}.new-message span{font-size:0.8rem;display:block;margin-bottom:2px}.my-message{float:right !important;background-color:#86bf9d;color:white}
+/* reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html, body {
+  height: 100%; }
+
+body {
+  font: 16px Helvetica, Arial; }
+
+main {
+  display: flex;
+  height: 100%;
+  flex-direction: row; }
+
+.form-container, .messages {
+  padding: 20px; }
+
+.form-container {
+  flex: 1;
+  background-color: #e1e8f0;
+  height: 100%;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 50%; }
+  .form-container label {
+    display: block;
+    margin-bottom: 0.5rem; }
+
+.messages {
+  flex: 2;
+  background-color: #ffffff;
+  height: 100%; }
+
+input, textarea {
+  display: block;
+  width: 100%;
+  border: 2px solid #9068be;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  padding: 0.4rem;
+  border-style: solid; }
+
+textarea {
+  height: 135px; }
+
+form {
+  padding: 3px;
+  margin: 12px auto; }
+  form input[type=submit] {
+    width: auto;
+    padding: 10px;
+    background-color: #6ed3cf;
+    border: 2px solid #6ed3cf;
+    margin-top: 1rem;
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold; }
+  form input[type=submit]:hover {
+    width: auto;
+    padding: 10px;
+    background-color: #9068be;
+    border: 2px solid #9068be;
+    transition: ease 0.5s;
+    margin-top: 1rem;
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold; }
+
+#messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  #messages li {
+    padding: 5px 10px; }
+  #messages li:nth-child(odd) {
+    background: #eee; }
+
+.new-message {
+  width: 45%;
+  padding: 8px 12px;
+  background-color: #9068BE;
+  color: #ffffff;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  float: left;
+  clear: both; }
+  .new-message span {
+    font-size: 0.8rem;
+    display: block;
+    margin-bottom: 2px; }
+
+.my-message {
+  float: right !important;
+  background-color: #6ed3cf;
+  color: white; }
+
 /*# sourceMappingURL=main.css.map */
